--- a/.github/workflows/AX6S.yml
+++ b/.github/workflows/AX6S.yml
@@ -33,7 +33,8 @@ env:
 jobs:
   build:
     name: Build OpenWrt
-    runs-on: ubuntu-latest
+#  runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout
