--- a/.github/workflows/AX6S.yml
+++ b/.github/workflows/AX6S.yml
@@ -33,8 +33,7 @@ env:
 jobs:
   build:
     name: Build OpenWrt
-#  runs-on: ubuntu-latest
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
