--- a/.github/workflows/AX6S.yml
+++ b/.github/workflows/AX6S.yml
@@ -51,7 +51,7 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           sudo -E apt-get -qq update
-          sudo -E apt-get -qq install 
+          sudo -E apt-get -qq install $(< $GITHUB_WORKSPACE/code.dependencies)
           sudo -E apt-get -qq autoremove --purge
           sudo -E apt-get -qq clean
           sudo timedatectl set-timezone "Asia/Shanghai"
