--- a/.github/workflows/AX1800PRO.yml
+++ b/.github/workflows/AX1800PRO.yml
@@ -30,7 +30,7 @@ on:
 
 env:
   REPO_URL: https://github.com/King-Of-Knights/openwrt-6.x
-  REPO_BRANCH: master
+  REPO_BRANCH: main
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: AX1800PRO.config
   DIY_P1_SH: diy-part1.sh
