--- a/.github/workflows/CR660x-paim.yml
+++ b/.github/workflows/CR660x-paim.yml
@@ -30,7 +30,7 @@ on:
 
 env:
   REPO_URL: https://github.com/padavanonly/immortalwrt
-  REPO_BRANCH: master
+  REPO_BRANCH: mt7915_mtwifi
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: CR660x-paim.config
   DIY_P1_SH: diy-part1.sh
